--- a/views/admin/pages/roles/permission.pug
+++ b/views/admin/pages/roles/permission.pug
@@ -129,6 +129,32 @@ block main
                             td(class="text-center")
                                 input(type="checkbox" checked = (record.permission.includes("article_restore") ? true : false))
 
+                    //- Đơn hàng
+                    tr 
+                        td(colspan='4')
+                            b Đơn hàng
+                    tr(data-name="order_view")
+                        td Xem 
+                        each record in records
+                            td(class="text-center")
+                                input(type="checkbox" checked = (record.permission.includes("order_view") ? true : false))
+                    tr(data-name="order_create")
+                        td Thêm mới 
+                        each record in records
+                            td(class="text-center")
+                                input(type="checkbox" checked = (record.permission.includes("order_create") ? true : false))
+                    tr(data-name="order_edit")
+                        td Chỉnh sửa 
+                        each record in records
+                            td(class="text-center")
+                                input(type="checkbox" checked = (record.permission.includes("order_edit") ? true : false))
+                    tr(data-name="order_delete")
+                        td Xóa 
+                        each record in records
+                            td(class="text-center")
+                                input(type="checkbox" checked = (record.permission.includes("order_delete") ? true : false))
+
+
                     //- Nhóm quyền
                     tr 
                         td(colspan='4')
@@ -184,6 +210,7 @@ block main
                             td(class="text-center")
                                 input(type="checkbox" checked = (record.permission.includes("account_delete") ? true : false))
 
+                    //- Cài đặt
                     tr 
                         td(colspan='4')
                             b Cài đặt
