--- a/views/admin/pages/orders/detail.pug
+++ b/views/admin/pages/orders/detail.pug
@@ -74,7 +74,7 @@ block main
 
         .row
             .col-12.text-right
-                button(type="button" class='btn btn-primary m-3' id='print-order') In hóa đơn 
+                button(type="button" class='btn btn-primary m-3' id='print-order') <i class="fa-solid fa-print"></i> In hóa đơn 
 
         script(type='text/javascript' src="/admin/js/order.js")
     else 
