--- a/views/admin/pages/roles/permission.pug
+++ b/views/admin/pages/roles/permission.pug
@@ -185,10 +185,10 @@ block main
                             td(class="text-center")
                                 input(type="checkbox" checked = (record.permission.includes("role_permission") ? true : false))
 
-                    //- Tài khoản
+                    //- Tài khoản admin
                     tr 
-                        td(colspan='4')
-                            b Tài khoản
+                        td(colspan=records.length)
+                            b Tài khoản Admin
                     tr(data-name="account_view")
                         td Xem 
                         each record in records
@@ -209,6 +209,31 @@ block main
                         each record in records
                             td(class="text-center")
                                 input(type="checkbox" checked = (record.permission.includes("account_delete") ? true : false))
+
+                    //- Tài khoản người dùng
+                    tr 
+                        td(colspan=records.length)
+                            b Tài khoản người dùng
+                    tr(data-name="user_view")
+                        td Xem 
+                        each record in records
+                            td(class="text-center")
+                                input(type="checkbox" checked = (record.permission.includes("user_view") ? true : false))
+                    tr(data-name="user_create")
+                        td Thêm mới 
+                        each record in records
+                            td(class="text-center")
+                                input(type="checkbox" checked = (record.permission.includes("user_create") ? true : false))
+                    tr(data-name="user_edit")
+                        td Chỉnh sửa 
+                        each record in records
+                            td(class="text-center")
+                                input(type="checkbox" checked = (record.permission.includes("user_edit") ? true : false))
+                    tr(data-name="user_delete")
+                        td Xóa 
+                        each record in records
+                            td(class="text-center")
+                                input(type="checkbox" checked = (record.permission.includes("user_delete") ? true : false))
 
                     //- Cài đặt
                     tr 
