[admin] Thêm validate cho phần quên mật khẩu

--- a/views/client/pages/users/info.pug
+++ b/views/client/pages/users/info.pug
@@ -45,8 +45,8 @@ block main
                                 td.pl-3 #{user.fullName}
                             tr 
                                 td.text-muted.text-right Email
-                                td(class='pl-3 input-group input-group-sm')
-                                    input(class='form-control col-6' value=user.email readonly)
+                                td(class='pl-3 input-group input-group-sm col-sm-10')
+                                    input(class='form-control col-6 form-control-plaintext' value=user.email readonly)
 
                             tr 
                                 td.text-muted.text-right Số điện thoại
