--- a/public/css/style.css
+++ b/public/css/style.css
@@ -383,6 +383,7 @@ input[type="number"]::-webkit-inner-spin-button {
 
 /* End Notification */
 
+/* Multi menu  */
 .multi-menu {
     position: relative;
 }
@@ -410,3 +411,106 @@ input[type="number"]::-webkit-inner-spin-button {
     width: 100%;
     display: inline-block;
 }
+
+/* End Multi menu  */
+
+/* Chat */
+.chat {
+    border: #BDBDBD 1px solid;
+    border-radius: 8px;
+    
+}
+
+.chat .inner-head {
+    border-bottom: #BDBDBD 1px solid;
+    padding: 10px;
+}
+
+.chat .inner-foot {
+    border-top: #BDBDBD 1px solid;
+    padding: 5px;
+}
+
+.chat .inner-form {
+    display: flex;
+}
+
+.chat .inner-form input {
+    flex: 3;
+    height: 32px;
+    border-radius: 15px;
+    padding: 0 10px;
+    outline: none;
+    border: #BDBDBD 1px solid;
+}
+
+.chat .inner-form button {
+    border-radius: 15px;
+    border: #17A2B8 1px solid;
+    background-color: #17A2B8;
+    padding: 0 10px;
+    outline: none;
+}
+
+/* .chat .inner-body {
+    position: relative;
+} */
+
+.chat .inner-incoming {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+}
+
+.chat .inner-outgoing {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+}
+
+.inner-text {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 5px;
+}
+
+.inner-content {
+    border-radius: 15px;
+    padding: 5px;
+    margin-bottom: 2px;
+    display: inline-block;
+    max-width: 50vw;
+    margin-right: 10px;
+}
+
+.chat .inner-incoming .inner-content {
+    background-color: #BDBDBD;
+}
+
+.chat .inner-outgoing .inner-content {
+    background-color: #17A2B8;
+}
+
+.inner-name {
+    font-size: 12px;
+}
+
+.inner-avatar {
+    align-self: last baseline;
+    margin: 0 10px;
+}
+
+
+
+
+.inner-avatar img {
+    width: 2em;
+    height: 2em;
+    object-fit: cover;
+    border-radius: 45px;
+    border: #17A2B8 solid 1px;
+}
+
+
+
+/* End Chat */
