[admin] Tạo collection chats

--- a/views/client/pages/chat/index.pug
+++ b/views/client/pages/chat/index.pug
@@ -79,4 +79,5 @@ block main
                                     i(class="fa-regular fa-paper-plane")
                                 
     script(src="/socket.io/socket.io.js") 
+    script(src="/js/socket.js") 
     script(src="/js/chat.js") 
