--- a/views/client/layouts/default.pug
+++ b/views/client/layouts/default.pug
@@ -17,4 +17,5 @@ html
 
         script(src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js")
         script(src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js")
+        script(type="module" src="https://cdn.jsdelivr.net/npm/emoji-picker-element@^1/index.js")
         script(src="/js/script.js") 
