--- a/views/client/pages/chat/index.pug
+++ b/views/client/pages/chat/index.pug
@@ -83,13 +83,17 @@ block main
                             )
                                 input(
                                     type='text'
-                                    placeholder='Nhập nội dung...'
+                                    placeholder='Aa'
                                     name='content'
                                     autocomplete='off'
                                 )
+                                span(class='btn btn-icon')
+                                    i(class="fa-regular fa-face-grin-beam")
                                 button
                                     i(class="fa-regular fa-paper-plane")
+    div(class="tooltip" role="tooltip") 
+        emoji-picker
                                 
     script(src="/socket.io/socket.io.js") 
     script(src="/js/socket.js") 
-    script(src="/js/chat.js") 
+    script(type='module' src="/js/chat.js") 
