--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,6 +1,7 @@
 *{
     color: #191919;
     box-sizing: border-box;
+    font-family: "Roboto" ,"Twemoji Mozilla", "Twemoji Country Flags", "Helvetica", "Comic Sans", serif;
 }
 
 /* Header */
@@ -418,7 +419,6 @@ input[type="number"]::-webkit-inner-spin-button {
 .chat {
     border: #BDBDBD 1px solid;
     border-radius: 8px;
-    
 }
 
 .chat .inner-head {
@@ -485,7 +485,7 @@ input[type="number"]::-webkit-inner-spin-button {
 }
 
 .chat .inner-incoming .inner-content {
-    background-color: #BDBDBD;
+    background-color: #ddd;
 }
 
 .chat .inner-outgoing .inner-content {
@@ -513,8 +513,18 @@ input[type="number"]::-webkit-inner-spin-button {
 /* End Chat */
 
 /* Icon board */
+.chat .btn-icon {
+    border-radius: 100px;
+}
+
+.btn-icon:hover {
+    background-color: #BDBDBD;
+}
+
 .tooltip {
     visibility: hidden;
+    border-radius: 12px;
+    border: 1px #ddd solid;
 }
 
 .tooltip.shown{
