--- a/views/client/pages/chat/index.pug
+++ b/views/client/pages/chat/index.pug
@@ -92,7 +92,7 @@ block main
                                 button
                                     i(class="fa-regular fa-paper-plane")
     div(class="tooltip" role="tooltip") 
-        emoji-picker
+        emoji-picker(class='light')
                                 
     script(src="/socket.io/socket.io.js") 
     script(src="/js/socket.js") 
