--- a/views/client/layouts/default.pug
+++ b/views/client/layouts/default.pug
@@ -2,11 +2,15 @@ doctype html
 html 
     head 
         title #{title}
+        meta(charset="UTF-8")
+        
         link(rel="stylesheet", href="/css/style.css")
         link(rel="stylesheet", href="/css/article.css")
         link(rel="icon" href=settingGeneral.favicon type="image/x-icon")
         link(rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css")
         link(rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css")
+        //- tham khảo thư viện https://github.com/johndatserakis/file-upload-with-preview#readme
+        link(rel="stylesheet" href="https://unpkg.com/file-upload-with-preview/dist/style.css")
 
     body 
         include ../partials/header.pug
@@ -18,4 +22,14 @@ html
         script(src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js")
         script(src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js")
         script(type="module" src="https://cdn.jsdelivr.net/npm/emoji-picker-element@^1/index.js")
+
+        
+
+        //- script của thư viện file-upload-with-preview
+        script(src="https://unpkg.com/file-upload-with-preview/dist/file-upload-with-preview.iife.js")    
+
+        //- Socket IO
+        script(src="/socket.io/socket.io.js") 
+        script(src="/js/socket.js")
+        
         script(src="/js/script.js") 
