--- a/views/client/pages/chat/index.pug
+++ b/views/client/pages/chat/index.pug
@@ -33,16 +33,30 @@ block main
                                             img(
                                                 src= chat.userInfo.avatar
                                             )  
+
                                     .inner-text 
                                         if (user.id != chat.userInfo.id) 
                                             small.inner-name #{chat.userInfo.fullName}
-                                        .inner-content #{chat.content}
-
+                                        if (chat.images.length > 0)
+                                            .inner-image.mr-2 
+                                                each image in chat.images 
+                                                    div
+                                                        img(src=image)
+                                        if (chat.content)
+                                            .inner-content #{chat.content}
+                                            
+                        .inner-preview
+                            div(class="custom-file-container" data-upload-id="image-upload")
                         .inner-foot 
                             form(
                                 action=''
                                 class='inner-form'
                             )
+                                label(class='btn mb-0' for='file-upload-with-preview-image-upload')
+                                    i(class="fa-regular fa-image")
+                                span(class='btn btn-icon')
+                                    i(class="fa-regular fa-face-grin-beam")
+
                                 input(
                                     type='text'
                                     placeholder='Aa'
@@ -50,11 +64,7 @@ block main
                                     autocomplete='off'
                                 )
 
-                                div(class="custom-file-container" data-upload-id="image-upload")
-                                
-                                span(class='btn btn-icon')
-                                    i(class="fa-regular fa-face-grin-beam")
-                                button
+                                button(class="btn btn-secondary ml-2 mr-2")
                                     i(class="fa-regular fa-paper-plane")
                                     
     div(class="tooltip" role="tooltip") 
