--- a/views/client/layouts/default.pug
+++ b/views/client/layouts/default.pug
@@ -11,7 +11,8 @@ html
         link(rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css")
         //- tham khảo thư viện https://github.com/johndatserakis/file-upload-with-preview#readme
         link(rel="stylesheet" href="https://unpkg.com/file-upload-with-preview/dist/style.css")
-
+        //- Thư viện viewerjs hỗ trợ view fullscreen image
+        link(rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/viewerjs/1.11.6/viewer.css" integrity="sha512-eG8C/4QWvW9MQKJNw2Xzr0KW7IcfBSxljko82RuSs613uOAg/jHEeuez4dfFgto1u6SRI/nXmTr9YPCjs1ozBg==" crossorigin="anonymous" referrerpolicy="no-referrer")
     body 
         include ../partials/header.pug
 
@@ -21,9 +22,9 @@ html
 
         script(src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js")
         script(src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js")
-        script(type="module" src="https://cdn.jsdelivr.net/npm/emoji-picker-element@^1/index.js")
 
-        
+        //- icon chat
+        script(type="module" src="https://cdn.jsdelivr.net/npm/emoji-picker-element@^1/index.js")
 
         //- script của thư viện file-upload-with-preview
         script(src="https://unpkg.com/file-upload-with-preview/dist/file-upload-with-preview.iife.js")    
@@ -31,5 +32,8 @@ html
         //- Socket IO
         script(src="/socket.io/socket.io.js") 
         script(src="/js/socket.js")
+
+        //- ViewerJS
+        script(src="https://cdnjs.cloudflare.com/ajax/libs/viewerjs/1.11.6/viewer.js" integrity="sha512-MdZwHb4u4qCy6kVoTLL8JxgPnARtbNCUIjTCihWcgWhCsLfDaQJib4+OV0O8IS+ea+3Xv/6pH3vYY4LWpU/gbQ==" crossorigin="anonymous" referrerpolicy="no-referrer")
         
         script(src="/js/script.js") 
