--- a/views/client/pages/chat/index.pug
+++ b/views/client/pages/chat/index.pug
@@ -8,8 +8,11 @@ block main
     +notification-success(messages.success)
     +notification-error(messages.error)
 
+
+    include ../../partials/list-btn-users.pug
+
     .section-product-featured.my-5
-        .container
+        .container.my-2
             .row 
                 .col-12 
                     +box-head("Chat")
