--- a/views/client/layouts/default.pug
+++ b/views/client/layouts/default.pug
@@ -37,3 +37,5 @@ html
         script(src="https://cdnjs.cloudflare.com/ajax/libs/viewerjs/1.11.6/viewer.js" integrity="sha512-MdZwHb4u4qCy6kVoTLL8JxgPnARtbNCUIjTCihWcgWhCsLfDaQJib4+OV0O8IS+ea+3Xv/6pH3vYY4LWpU/gbQ==" crossorigin="anonymous" referrerpolicy="no-referrer")
         
         script(src="/js/script.js") 
+
+        block script 
