--- a/views/client/pages/users/not-friend.pug
+++ b/views/client/pages/users/not-friend.pug
@@ -10,20 +10,23 @@ block main
 
     include ../../partials/list-btn-users.pug
 
-    .container.my-3.card-user
+    .container.my-3
         .row 
             .col-12 
                 +box-head("Những người bạn có thể biết")
 
         .row    
             each user in users
-                .col-2
+                .col-2.card-user
                     .card.mb-2
                         img.card-img-top(src=user.avatar alt='avatar')
                         .card-body
                             p.card-title <b>#{user.fullName}</b>
-                            button.btn-block.btn.btn-info.btn-sm( btn-add-friend = user.id) Kết bạn
-                            button.btn-block.btn.btn-secondary.btn-sm Xóa
-
-
+                            small.sent-friend Đã gửi lời mời
+                            button.btn-block.btn.btn-info.btn-sm( btn-add-friend = user.id) Thêm bạn bè
+                            button.btn-block.btn.btn-secondary.btn-sm(btn-del-friend) Xóa
+                            button.btn-block.btn.btn-secondary.btn-sm(btn-cancel-friend = user.id) Hủy lời mời
+                            
+    block script
+        script(src="/js/users.js") 
             
