--- a/public/css/style.css
+++ b/public/css/style.css
@@ -691,7 +691,6 @@ input[type="number"]::-webkit-inner-spin-button {
     display: none;
 }
 
-
 .card-user .card-body.accept [noti-accepted] {
     display: block;
 }
@@ -699,7 +698,9 @@ input[type="number"]::-webkit-inner-spin-button {
 .card-user .card-body.denied [noti-denied] {
     display: block;
 }
-
-
 /* End card users */
 
+.map-container iframe {
+    width: 100%;
+    height: 100%;
+}
