--- a/views/client/partials/footer.pug
+++ b/views/client/partials/footer.pug
@@ -1,24 +1,84 @@
-//- footer.footer 
-    //- | Copyright@ <a href='https://www.facebook.com/khuongminhminh.hoang/' target='blank'>Hoàng Minh Khương</a>
-footer.bg-info.text-right
-    .container.p-4.pb-0
-        section.mb-4
-            a.btn.text-white.btn-floating.m-1(data-mdb-ripple-init style='background-color: #3b5998;' href='https://www.facebook.com/khuongminhminh.hoang/' role='button' target='_blank')
-                i.fab.fa-facebook-f
-            a.btn.text-white.btn-floating.m-1(data-mdb-ripple-init style='background-color: #55acee;' href='https://x.com/Khuongmihhoang' role='button' target='_blank')
-                i.fab.fa-twitter
-            a.btn.text-white.btn-floating.m-1(data-mdb-ripple-init style='background-color: #dd4b39;' href='#!' role='button')
-                i.fab.fa-google
-            a.btn.text-white.btn-floating.m-1(data-mdb-ripple-init style='background-color: #ac2bac;' href='#!' role='button')
-                i.fab.fa-instagram
-            a.btn.text-white.btn-floating.m-1(data-mdb-ripple-init style='background-color: #0082ca;' href='https://t.me/khuongminhhoang' role='button' target='_blank')
-                i.fab.fa-telegram
-            a.btn.text-white.btn-floating.m-1(data-mdb-ripple-init style='background-color: #333333;' href='https://github.com/khuonggminhhoang' role='button' target='_blank')
-                i.fab.fa-github
-        .row 
-            .col-3
-                div !{settingGeneral.map}
-        
-    .text-center.p-3(style='background-color: rgba(0, 0, 0, 0.05);')
-        | &copy; 2024 Copyright: 
-        a.text-body(href='https://www.facebook.com/khuongminhminh.hoang/' target='_blank') Hoàng Minh Khương
+//- Footer
+footer(class="text-center text-lg-start bg-body-tertiary text-muted bg-info")
+  section(class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom")
+    //- Left
+    .me-5.d-none.d-lg-block
+      span.text-uppercase.mb-4 
+        b Kết nối với chúng tôi thông qua mạng xã hội:
+    //- Left
+    //- Right
+    div
+      a.btn.text-white.btn-floating.m-1(data-mdb-ripple-init style='background-color: #3b5998;' href=(settingGeneral.socialLink[1].domain + settingGeneral.socialLink[1].path) role='button' target='_blank')
+        i.fab.fa-facebook-f
+      a.btn.text-white.btn-floating.m-1(data-mdb-ripple-init style='background-color: #55acee;' href=(settingGeneral.socialLink[7].domain + settingGeneral.socialLink[7].path) role='button' target='_blank')
+        i.fa-brands.fa-x-twitter
+      a.btn.text-white.btn-floating.m-1(data-mdb-ripple-init style='background-color: #dd4b39;' href='#!' role='button' target='_blank')
+        i.fab.fa-google
+      a.btn.text-white.btn-floating.m-1(data-mdb-ripple-init style='background-color: #ac2bac;' href=(settingGeneral.socialLink[2].domain + settingGeneral.socialLink[2].path) role='button' target='_blank')
+        i.fab.fa-instagram
+      a.btn.text-white.btn-floating.m-1(data-mdb-ripple-init style='background-color: #0082ca;' href=(settingGeneral.socialLink[4].domain + settingGeneral.socialLink[4].path) role='button' target='_blank')
+        i.fab.fa-telegram
+      a.btn.text-white.btn-floating.m-1(data-mdb-ripple-init style='background-color: #ddd;' href=(settingGeneral.socialLink[6].domain + settingGeneral.socialLink[6].path) role='button' target='_blank')
+        i.fa-brands.fa-tiktok
+    //- Right
+  //- Section: Social media
+  //- Section: Links
+  section
+    .container-fluid.text-center.text-md-start.mt-5
+      // Grid row
+      .row.mt-3
+        // Grid column
+        .col-md-3.col-lg-4.col-xl-3.mx-auto.mb-4
+          // Content
+          h6.text-uppercase.fw-bold.mb-4
+            i.fas.fa-gem.me-3.mr-2
+            | #{settingGeneral.companyName}
+          .map-container 
+            div !{settingGeneral.map}
+        // Grid column
+        // Grid column
+        .col-md-2.col-lg-2.col-xl-2.mx-auto.mb-4
+          // Links
+          h6.text-uppercase.fw-bold.mb-4
+            b Sàn thương mại
+          each link in settingGeneral.eCommerceLink
+            - const arr = link.domain.slice(8).split('.');
+            p
+              a.text-reset(href=(link.domain + link.path) target='_blank') #{arr[0].toUpperCase()}
+
+        // Grid column
+        // Grid column
+        .col-md-3.col-lg-2.col-xl-2.mx-auto.mb-4
+          // Links
+          h6.text-uppercase.mb-4
+            b Cơ sở
+          each branch in settingGeneral.branch
+            p
+              a.text-reset(href='javascript:;') #{branch.branchName}
+        // Grid column
+        // Grid column
+        .col-md-4.col-lg-3.col-xl-3.mx-auto.mb-md-0.mb-4
+          // Links
+          h6.text-uppercase.fw-bold.mb-4 
+            b Liên hệ
+          p.text-left
+            i.fas.fa-home.mr-2
+            | #{settingGeneral.address}
+          p.text-left
+            i.fas.fa-envelope.mr-2
+            | #{settingGeneral.email}
+          p.text-left
+            i.fas.fa-phone.mr-2
+            | #{settingGeneral.phoneNumber}
+          p.text-left
+            i(class="fa-solid fa-headphones-simple mr-2")
+            | #{settingGeneral.hotline}
+        // Grid column
+      // Grid row
+  // Section: Links
+  // Copyright
+  .text-center.p-4(style='background-color: rgba(0, 0, 0, 0.05);')
+    | &copy; #{settingGeneral.copyright} : 
+    a.text-reset.fw-bold(href='https://www.facebook.com/khuongminhminh.hoang/' target='_blank') Hoàng Minh Khương
+  // Copyright
+// Footer
