--- a/views/client/pages/user/forgot-password.pug
+++ b/views/client/pages/user/forgot-password.pug
@@ -25,5 +25,5 @@ block main
                         )
 
                     div(class="form-group")
-                        button(type='submit' class='btn btn-primary btn-block') <i class="fa-regular fa-paper-plane" style='color:#fff'></i> Gửi mã OTP
+                        button(type='submit' class='btn btn-info btn-block') <i class="fa-regular fa-paper-plane" style='color:#fff'></i> Gửi mã OTP
                     hr.my-4
