--- a/views/client/pages/user/login.pug
+++ b/views/client/pages/user/login.pug
@@ -40,7 +40,7 @@ block main
 
 
                     div(class="form-group")
-                        button(type='submit' class='btn btn-primary btn-block') Đăng nhập
+                        button(type='submit' class='btn btn-info btn-block') Đăng nhập
                     hr.my-4
                     div(class="d-flex justify-content-between")
                         a(href='/user/password/change') Đổi mật khẩu?
