--- a/views/client/pages/user/register.pug
+++ b/views/client/pages/user/register.pug
@@ -70,7 +70,7 @@ block main
                         )
 
                     div(class="form-group")
-                        button(type='submit' class='btn btn-primary btn-block') Đăng ký
+                        button(type='submit' class='btn btn-info btn-block') Đăng ký
                     hr.my-4
                     p Bạn đã có tài khoản? Đăng nhập 
                         a(href='/user/login') tại đây.
