--- a/views/client/pages/users/accept.pug
+++ b/views/client/pages/users/accept.pug
@@ -9,7 +9,7 @@ block main
             .col-12 
                 +box-head("Lời mời kết bạn")
 
-        .row    
+        .row.accept-friend    
             each user in users
                 .col-2.card-user(user-id=user.id)
                     .card.mb-2
