--- a/views/client/pages/user/otp-change-password.pug
+++ b/views/client/pages/user/otp-change-password.pug
@@ -41,5 +41,5 @@ block main
                         
 
                     div(class="form-group")
-                        button(type='submit' class='btn btn-primary btn-block' confirm-in-time) Xác thực
+                        button(type='submit' class='btn btn-info btn-block' confirm-in-time) Xác thực
                     hr.my-4
