--- a/views/client/pages/user/reset-password.pug
+++ b/views/client/pages/user/reset-password.pug
@@ -36,5 +36,5 @@ block main
                         )
 
                     div(class="form-group")
-                        button(type='submit' class='btn btn-primary btn-block') Đổi mật khẩu
+                        button(type='submit' class='btn btn-info btn-block') Đổi mật khẩu
                     hr.my-4
