--- a/public/css/style.css
+++ b/public/css/style.css
@@ -710,8 +710,33 @@ input[type="number"]::-webkit-inner-spin-button {
 
 /* End card users */
 
+/* Map */
 .map-container iframe {
     width: 400px;
     max-height: 300px;
     aspect-ratio: 1/1;
 }
+/* End Map */
+
+/* Status light */
+
+.status-light {
+    height: 10px;
+    width: 10px;
+    border-radius: 100%;
+    position: absolute;
+    right: -5px;
+    top: -5px
+}
+
+.status-light[status='online']{
+    background-color: #46AB5E;
+    border: #17A2B8 solid 1px;
+}
+
+.status-light[status='offline']{
+    background-color: #BDBDBD;
+    border: #17A2B8 solid 1px;
+}
+
+/* End Status light */
