--- a/views/client/pages/users/friends.pug
+++ b/views/client/pages/users/friends.pug
@@ -17,14 +17,13 @@ block main
                         img.card-img-top(src=user.avatar alt='avatar')
                         .card-body.friend 
                             p.card-title <b>#{user.fullName}</b>
-                            small.sent-friend Đã gửi lời mời
                             button.btn-block.btn.btn-info.btn-sm( btn-add-friend = user.id) Thêm bạn bè
                             button.btn-block.btn.btn-info.btn-sm.mt-0(btn-accept-friend = user.id) Xác nhận
                             button.btn-block.btn.btn-secondary.btn-sm(btn-del-friend) Xóa
                             button.btn-block.btn.btn-secondary.btn-sm(btn-cancel-friend = user.id) Hủy lời mời
                             button.btn-block.btn.btn-secondary.btn-sm(btn-denied-friend = user.id) Từ chối lời mời
                             button.btn-block.btn.btn-secondary.btn-sm(btn-unfriend = user.id) Hủy kết bạn
-                            button.btn-block.btn.btn-info.btn-sm(btn-inbox = user.id) Nhắn tin
+                            a.btn-block.btn.btn-info.btn-sm(btn-inbox = user.id href=`/chat/${user.roomChatId}`) Nhắn tin
                             button.btn-block.btn.btn-secondary.btn-sm.mt-3(noti-accepted disabled) Đã chấp nhận kết bạn
                             button.btn-block.btn.btn-secondary.btn-sm.mb-3(noti-denied disabled) Đã Từ chối kết bạn
 
